[JTB-16] Implement keyboard for choosing group id